--- a/src/app/badge/badge.component.html
+++ b/src/app/badge/badge.component.html
@@ -1,3 +1,3 @@
-<badge [attr.category]=" badge.category" [attr.expand]="this.expand" (click)="toggleExpand()">
+<badge [attr.category]=" badge.category" [attr.name]="badge.name" [attr.activate]="activate" [attr.expand]="expand" (click)="toggleButton()">
   <span>{{ badge.name }}</span>
 </badge>
