--- a/src/app/offer-list/offer-list.component.html
+++ b/src/app/offer-list/offer-list.component.html
@@ -2,7 +2,7 @@
 top: var(--menu-height);
 position: absolute;
 width: calc(100% - 20px);">
-  <div>
+  <div class="container">
     <offer-details *ngFor="let offer of offers" [offer]="offer"></offer-details>
   </div>
 
