--- a/src/app/badge/badge.component.css
+++ b/src/app/badge/badge.component.css
@@ -1,6 +1,6 @@
 /* Badges */
 badge, badge span{
-  transition: all .2s ease!important;
+  transition: all .4s ease!important;
   cursor: default;
 }
 
@@ -9,24 +9,35 @@ badge {
     border: .2vmin solid var(--default);
     list-style-type: circle;
     border-radius: 12pt;
-    margin-left: 2pt;
-    padding: .5pt 2pt .5pt 5pt;
+    padding: 1pt 4pt 1pt 4pt;
     font-weight: 500;
-    font-size: 12pt;
     float: right;
+    flex: 1 0 50%;
+
+  display: inline-flex;
+  font-size: 9pt;
+  margin-left: 0vmin;
+  margin-right: 1vmin;
 }
-badge:hover, badge[expand=true] {
-  padding: .5pt 2pt .5pt 5pt;
+badge:hover, badge[activate=true] {
+  /* padding: .5pt 2pt .5pt 5pt; */
   background-color: var(--default);
   border-color: transparent;
 }
 badge span{
   color: var(--default);
+  max-width: calc(100vw);
+  overflow: hidden;
+  display: block;
+  white-space: nowrap;
 }
-badge:hover span, badge[expand=true] span{
+badge:hover span{
+  max-width: calc(100vw);
+}
+badge:hover span, badge[activate=true] span{
   color: #fff!important;
 }
-badge:hover::after, badge[expand=true]::after{
+badge:hover::after, badge[activate=true]::after{
   background-color: #fff!important;
 }
 badge::after, badge::before{
@@ -37,10 +48,10 @@ badge::after, badge::before{
   height: 9pt;
   width: 9pt;
 }
-badge[expand=false]::after, badge[expand=true]::before{
+badge[activate=false]::after, badge[activate=true]::before{
   transform: scale(1);
 }
-badge[expand=true]::after, badge[expand=false]::before{
+badge[activate=true]::after, badge[activate=false]::before{
   transform: scale(.0);
 }
 badge::before{
@@ -55,7 +66,7 @@ badge::after{
     margin-right: 0vmin;
 }
 
-badge[expand=false]::before{
+badge[activate=false]::before{
   background-color: hsla(0, 0%, 50%, .0);
 }
 
@@ -71,7 +82,7 @@ badge[category=jobtype] span{
 badge[category=jobtype]::after{
   background-color: var(--jobtype);
 }
-badge[category=jobtype]:hover, badge[category=jobtype][expand=true]{
+badge[category=jobtype]:hover, badge[category=jobtype][activate=true]{
   background-color: var(--jobtype);
 }
 
@@ -85,7 +96,7 @@ badge[category=fav] span{
 badge[category=fav]::after{
   background-color: var(--fav);
 }
-badge[category=fav]:hover, badge[category=fav][expand=true]{
+badge[category=fav]:hover, badge[category=fav][activate=true]{
   background-color: var(--fav);
 }
 
@@ -99,32 +110,24 @@ badge[category=match] span{
 badge[category=match]::after{
   background-color: var(--match);
 }
-badge[category=match]:hover, badge[category=match][expand=true]{
+badge[category=match]:hover, badge[category=match][activate=true]{
   background-color: var(--match);
 }
 
-
+badge[expand=false] span{
+  width: 0vh;
+}
 
 /* Badge Mobile */
 @media (orientation: portrait) {
+
   badge {
+    padding: 1.5pt 2pt .5pt 5pt;
     float: right;
-    padding: 1.5pt 4pt 0.5pt 0pt;
-    display: inline-flex;
-    font-size: 9pt;
-    margin-left: 0vmin;
-    margin-right: 1vmin;
   }
-  badge:hover {
-    padding: .5pt 2pt .5pt 5pt;
+  badge span{
+    max-width: calc(25vw);
   }
-  badge>span {
-    max-width: 0vh;
-    overflow: hidden;
-    display: block;
-    white-space: nowrap;
-  }
-  badge:hover>span {
-    max-width: 33vh;
-  }
+
+
 }
