--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -1,10 +1,14 @@
 mat-card{
-  background:#fff;
+  background:transparent;
   color:#424242;
 }
 mat-card-content{
   display: flex;
   flex-direction: row;
+}
+mat-card-content>*:first-child{
+  flex-grow: 1;
+  width: 30%;
 }
 .mat-card-subtitle {
     color: var(--secondary-color);
@@ -15,12 +19,34 @@ mat-card-content{
     display: block;
     flex-direction: row;
 }
-user-details + div.mat-card-info{
-  padding: 1%;
+.panel-1{
+  height: calc(100vh - (var(--menu-height) + 10px + 16px));
+  position: -webkit-sticky;
+  position: sticky;
+  top: calc(var(--menu-height) + 10px + 16px);
 }
-@media only screen and (max-width: 960px){
+
+.panel-1 + div.mat-card-info{
+  padding: 1%;
+  width: 70%;
+}
+
+@media only screen and (max-width: 1000px), only screen and (orientation: portrait){
   mat-card-content{
     display: flex;
     flex-direction: column;
+  }
+  mat-card-content>*:first-child{
+    flex-grow: 1;
+    width: inherit;
+  }
+  .panel-1 {
+    position: relative;
+    top: 0;
+    height: unset;
+  }
+  .panel-1 + div.mat-card-info{
+    padding: 1%;
+    width: 100%;
   }
 }
