--- a/src/styles/loader.css
+++ b/src/styles/loader.css
@@ -3,16 +3,22 @@
 mat-spinner.mat-spinner{
   width: 100%;
   height: 100%;
-  left: calc(50vw - 50px);
+  left: calc(50% - 50px);
 }
 div.mat-spinner{
   height: 25vh;
-  position: absolute;
-  top: calc(50vh - 50px);
-  left: 0px;
+    width: 25vh;
+    position: absolute;
+    top: calc(50vh - 50px);
+    left: 50%;
+    transform: translateX(-50%);
 }
 div.mat-spinner.bottom{
-  bottom: 50px;
-  top: inherit;
+  bottom: 0px;
+  top: initial;
   position: relative;
+}
+div.mat-spinner.bottom mat-spinner.mat-spinner{
+  bottom: 25px;
+  position: absolute;
 }
