--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -9,6 +9,7 @@ mat-card-content{
 mat-card-content>*:first-child{
   flex-grow: 1;
   width: 30%;
+  height: 100%;
 }
 .mat-card-subtitle {
     color: var(--secondary-color);
