--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <mat-card style="margin-top:10px;">
-  <post-filter></post-filter>
+  <post-filter #filter></post-filter>
 
   <mat-card-content>
     <div class="panel-1" @developDown>
@@ -12,8 +12,8 @@
           <offer-details [offer]="post" *ngIf="post.type === 'offer' && this.filter.doSatisfy(post)"></offer-details>
           <post [post]="post" *ngIf="post.type !== 'offer' && this.filter.doSatisfy(post)"></post>
         </div>
-        <div class="mat-spinner"  *ngIf="loading_state" [ngClass]="{'bottom': this.userposts !== [] }">
-          <mat-spinner></mat-spinner>
+        <div class="mat-spinner" [ngClass]="{'bottom': this.userposts !== [] }">
+          <mat-spinner *ngIf="loading_state"></mat-spinner>
         </div>
     </div>
 
